infra/k8s/customer.depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: customers-depl
spec: 
  replicas: 1
  selector: 
    matchLabels:
      app: customers
  template: 
    metadata: 
      labels:
        app: customers
    spec: 
      containers:
        - name: customers
          image: edusantanaw1/bank-customers

---

apiVersion: v1
kind: Service
metadata:
  name: customers-port
spec:
  type: NodePort
  ports:
    - name: customers-port
      protocol: TCP
      port: 80
      targetPort: 80
  selector:
    app: customers
